# Discord-Chatbot

./: .gitignore  README.md  config.yml  main.py  pyproject.toml  requirements-g4f.txt  requirements.txt  terminal.py  test.py  venv.sh  私、主役の赤座あかりです.lrc
bot_utilities/: ai_utils.py  g4frespond.py  response_util.py  tenor.py  youtubedl.py
g4f/har_and_cookies/: bing.com.har
instructions/: avernus.txt
sauses/: 1.json
