[project]
name = "discord-chatbot"
version = "0.1.0"
description = "Asasaasaasa"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.8",
    "asyncio>=3.4.3",
    "audioop-lts>=0.2.1",
    "colorama>=0.4.6",
    "discord>=2.3.2",
    "discord-py>=2.4.0",
    "duckduckgo-search>=6.3.7",
    "fake-useragent>=1.5.1",
    "flask>=3.1.0",
    "g4f>=0.3.7.6",
    "gradio-client>=1.5.0",
    "langdetect>=1.0.9",
    "openai>=1.55.2",
    "pillow>=11.0.0",
    "pynacl>=1.5.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "werkzeug>=3.1.3",
    "youtube-transcript-api>=0.6.3",
    "yt-dlp>=2024.11.18",
]
